optimisation of if condition adn targetDirectory bug